[gd_scene load_steps=7 format=3 uid="uid://chvnypy23ib4r"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="1_8b8lx"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/summon_minion_list_panel.gd" id="1_igi3n"]
[ext_resource type="SpriteFrames" uid="uid://gcii401b383q" path="res://graphics/animations/a_player.tres" id="3_5f6kk"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="3_70krk"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://themes/button_row_theme.tres" id="3_igvxn"]
[ext_resource type="Texture2D" uid="uid://35ye7k3xtbym" path="res://graphics/items/rat_shard.png" id="5_b2wr6"]

[node name="SummonMinionListPanel" type="Panel" groups=["SummonMinionListPanel"]]
custom_minimum_size = Vector2(1120, 152)
offset_right = 1120.0
offset_bottom = 76.0
theme = ExtResource("1_8b8lx")
script = ExtResource("1_igi3n")

[node name="SpriteControl" type="Control" parent="."]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="MinionSprite" type="AnimatedSprite2D" parent="SpriteControl"]
position = Vector2(48, 48)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_5f6kk")
animation = &"walk"

[node name="CenterMinionName" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 110.0
offset_right = 397.0
grow_vertical = 2
alignment = 1

[node name="MinionName" type="RichTextLabel" parent="CenterMinionName"]
clip_contents = false
layout_mode = 2
theme = ExtResource("3_70krk")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
text = "Minion Name Goes Here"
fit_content = true

[node name="ShardDetails" type="Control" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_right = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShardCount" type="RichTextLabel" parent="ShardDetails"]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -13.0
offset_right = 34.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "x1234"
fit_content = true

[node name="ShardSpriteControl" type="Control" parent="ShardDetails"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -16.0
offset_right = -37.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShardSprite" type="Sprite2D" parent="ShardDetails/ShardSpriteControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("5_b2wr6")

[node name="CenterButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterButtons"]
layout_mode = 2
theme = ExtResource("3_igvxn")
alignment = 2

[node name="StatsButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Stats"

[node name="SummonButton" type="Button" parent="CenterButtons/HBoxContainer"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
text = "Summon"

[connection signal="pressed" from="CenterButtons/HBoxContainer/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="CenterButtons/HBoxContainer/SummonButton" to="." method="_on_summon_button_pressed"]
